--- a/package.yaml
+++ b/package.yaml
@@ -101,6 +101,7 @@ tests:
     - Course.StateTSpec
     - Course.ValidationSpec
     - Course.TraversableSpec
+    - Course.ParserSpec
     - Paths_course
     dependencies:
     - base <5 && >=3
